# FaultLine

./: .dockerignore  .env.example  .env.portainer.example  .gitignore  096-Deepseekfixit.md  ABOUT.md  ANALYSIS-dBug-062-ROOT-CAUSE.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  DEEPSEEK_INSTRUCTION_TEMPLATE.md  DEPLOYMENT-READY-2026-05-16.md  DEPLOYMENT.md  Docker.md  Dockerfile  FaultLine_Architecture.docx  FaultLine_Architecture_v2.docx  HONESTY.md  LEGGIMI-it.md  LICENSE  NEXT_STEPS.md  NOTICE  PRODUCTION_DEPLOYMENT_MANIFEST.txt  README.md  SECURITY.md  SYSTEM_PROMPT.md  VERIFICATION-dprompt-127-extraction-fix.md  check_entity_ids.py  check_query_endpoint.sh  compact-instruct.md  conftest.py  diagnose_query.py  docker-compose-dev.yml  docker-compose-portainer-withoutqdrant.yml  docker-compose-portainer.yml  docker-compose.eval.yml  docker-compose.local.external.yml  docker-compose.local.internal.yml  (+118 more)
.claude/: settings.json  settings.local.json
.continue/agents/: wren.yaml
.deepseek/pastes/: paste-2026-05-08-093422-609ce184.md  paste-2026-05-08-095422-83207d40.md  paste-2026-05-08-115737-7cf94181.md
.github/workflows/: test.yml
Archive/: CLAUDE-2026-05-12.md
BUGS/: dBug-012-suggestion.md  dBug-013-ingest-failure-medical-context.md  dBug-014-medical-extraction-not-triggered.md  dBug-015-medical-rel-types-unknown.md  dBug-016-openwebui-filter-integration-failure.md  dBug-016-validation-deepseek.md  dBug-017-gliner2-nonetype-lower.md  dBug-018-extract-missing-context.md  dBug-020-staged-facts-not-promoting.md  dBug-021-llm-extraction-architecture.md  dBug-022-REVISED-preferred-fact-exposure.md  dBug-023-deepseek.md  dBug-023-extraction-entity-fragmentation.md  dBug-024-child-name-correction-not-extracted.md  dBug-024-deepseek.md  dBug-025-entity-duplication-blocks-taxonomy-filtering.md  dBug-026-class-c-routing-verification-incomplete.md  dBug-026-entity-registry-pollution.md  dBug-027-ingest-endpoint-500-error.md  dBug-028-filter-extraction-not-working.md  dBug-029-contradictory-facts-in-query.md  dBug-029-deepseek.md  dBug-030-p1-response-serialization-broken.md  dBug-031-wrong-canonical-identity-unknown-types.md  dBug-032-entity-scalar-attributes-not-returned-in-query.md  dBug-033-identity-resolution-wrong-entity-regression.md  dBug-033A-identity-resolution-investigation.md  dBug-034-archive-filtering-architecture.md  dBug-035-user-spouse-not-ingested-hard-constraint-violation.md  dBug-035A-investigation-findings.md  dBug-035B-investigation-extended.md  dBug-035C-findings-taxonomy-cache-paradox.md  dBug-036A-scalar-object-uuid-resolution.md  dBug-037-classifier-brittleness.md  dBug-038-unknown-rel-type-heuristic-fallback.md  dBug-039-uuid-leakage-symptomatic-of-staging-failure.md  dBug-040-incomplete-fact-extraction.md  dBug-040B-investigation-findings.md  dBug-041-corrections-ignored.md  dBug-042-retraction-negation-patterns-missing.md  (+45 more)
DEV/MCP/: CLAUDE-DESKTOP-SETUP.md
FaultLine/: CLAUDE.md
config/: Dockerfile  docker-compose-dev.yml  docker-compose-portainer-withoutqdrant.yml  docker-compose-portainer.yml  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_QUERY_DESIGN.md  AUDIT-all-internal-prompts.md  CLAUDE.md  CONCEPTS.md  DEPLOYMENT-READY-2026-05-16.md  DEPLOYMENT.md  DEV_CYCLE_GUIDE.md  Docker.md  ENTITY_NORMALIZATION.md  ENV-REFERENCE.md  ENV-SPECIFICATION.md  FLOW-BRIEF.md  FLOWCHARTS-INGEST-RECALL.md  MCP-SETUP.md  MCP-SYSTEM-PROMPT.md  NEXT_STEPS.md  OPENWEBUI-API-INTEGRATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  RESEARCH-AND-INNOVATION.md  RESOLUTION_SUMMARY.md  SYSTEM_PROMPT.md  TECHNICAL-DEEP-DIVE.md  TESTING.md  TEST_SEQUENCING.md  WORKFLOW_ENFORCEMENT.md  dBug-055-SCALAR-SCHEMA-TEMPORAL-CONTEXT.md  llm-output-validator-integration.md
docs/mermaid/: README.md  extract-pipeline.mmd  ingest-pipeline.mmd  recall-pipeline.mmd
migrations/: 000_setup_extensions.sql  001_create_facts.sql  002_add_fact_weights.sql  002_create_entities.sql  003_add_contradiction.sql  003_add_user_scope.sql  003_confirmation_source.sql  004_add_preferred_name.sql  005_rel_types_table.sql  006_split_is_a.sql  007_correction_behavior.sql  007_rel_types_source.sql  008_entity_registry.sql  008_surrogate_keys.sql  009_entity_attributes.sql  010_attribute_sensitivity.sql  011_bitemporal.sql  012_staged_facts.sql  013_rel_type_category.sql  014_entity_attributes_unique.sql  015_entity_attributes_category.sql  015_events_table.sql  016_builtin_scalar_rel_types.sql  017_fix_schema_consistency.sql  018_normalize_entity_ids.py  018_ontology_evaluations.sql  019_entity_taxonomies.sql  021_name_conflicts.sql  022_rel_types_metadata.sql  023_archive_facts.sql  024_retraction_signals.sql  024_routing_metadata.sql  025_medical_rel_types.sql  026_body_parts_taxonomy.sql  028_fact_definitions.sql  029_remove_leaf_only_constraint.sql  030_rel_type_aliases.sql  030_strengthen_rel_types_wikidata_ontology.sql  031_add_unified_confidence.sql  031_rel_type_directionality_metadata.sql  (+98 more)
openwebui/: faultline_filter.py  faultline_function.py  faultline_mcp.py  faultline_tool.py
plans/: faultline-wgm.md
prompts/: prompt1.md  prompt2.md  prompt5.md  strong-model-prompt.md  weak-model-prompt.md
scripts/: data_migration_surrogate.py  validate_query.sh
specs/: faultline-design.md  faultline-spec.md
src/api/: idempotency.py  linguistic_cue_overlay.py  llm_calls.py  llm_client.py  llm_output_validator.py  logging_config.py  main.py  main.py.backup  models.py  qdrant_recall.py  rel_type_overlay.py  taxonomy_overlay.py  temporal_pattern_overlay.py
src/config/: __init__.py  settings.py
src/context_packager/: __init__.py
src/entity_registry/: __init__.py  entity_type_cache.py  registry.py
tests/: test_fact_realization_voice.py  test_llm_payload_chat_template_kwargs.py  test_pipeline.py  test_prose_composer.py  test_query_phase4.py  test_query_phase5.py  test_spine_allergy_relational_predicate.py  test_spine_atomic_claim.py  test_spine_genitive_name_and_alias.py  test_temporal_and_hierarchy_traceback.py
tools/: mcp_server.py
(+67 files in other folders)
