[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faultline-wgm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gliner2",
    "huggingface_hub>=0.23.0,<1.0.0",
    "psycopg2-binary",
    "httpx",
    "structlog",
    "redis>=5.0",
    # Deterministic LINGUISTIC LAYER (src/extraction/linguistics.py): spaCy CNN tagger/parser.
    # NO torch, NO GPU — a self-contained 15 MB CNN model (en_core_web_sm, baked into the image
    # by the Dockerfile). spaCy is SEPARATE from GLiNER2/qwen (grammar ≠ entity-typing).
    # The en_core_web_sm MODEL is NOT a PyPI package — it is a pinned GitHub-release wheel
    # installed explicitly in the Dockerfile so it is BAKED IN (no runtime `spacy download`).
    # If the model is ever absent at runtime, linguistics.py fail-safes to a no-op (today's path).
    "spacy>=3.7,<3.9",
    # Deterministic, rule-based DATE normalization for the temporal ingest layer
    # (src/extraction/linguistics.py::extract_event_date). Pure-Python, BSD-3, no ML/GPU.
    # spaCy DATE spans + a numeric-date regex propose candidate spans; dateparser normalizes +
    # VALIDATES each against a reference (RELATIVE_BASE) — a non-date span → None → dropped.
    # NO date guessing: a miss yields NULL event_date, never a fabricated "today".
    "dateparser>=1.2,<2.0",
    # Phonetic a/an article selection for the recall prose composer (convert_to_prose →
    # _indefinite_article). Pure-Python, MIT, no ML/GPU. Handles the OPEN lexical class
    # correctly (hour/honest→an, university/unicorn/one→a, X-ray→an); the CLOSED 26-letter
    # initialism rule (IP/SSD/FQDN→an, URL/UID→a) runs BEFORE inflect in code since inflect
    # mis-reads spoken initialisms. Optional at runtime: absent → initialism rule + vowel-
    # letter fallback (prose polish only — the article is NOT a det-scorer gold token).
    "inflect>=7.0,<8.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "fastembed>=0.3.0",
]
mcp = [
    "httpx",              # already a core dep, listed for explicitness
]
mcp-http = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "httpx",
]
test = [
    "pytest>=7.0",
    "pytest-mock",
    "requests",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic>=2.0",
]

[project.scripts]
faultline-mcp = "src.mcp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: test calls live services (LLM/GLiNER2/DB) — skipped unless RUN_LIVE=1",
]
