[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faultline-wgm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gliner2",
    "huggingface_hub>=0.23.0,<1.0.0",
    "psycopg2-binary",
    "httpx",
    "structlog",
    "redis>=5.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "fastembed>=0.3.0",
]
mcp = [
    "httpx",              # already a core dep, listed for explicitness
]
mcp-http = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "httpx",
]
test = [
    "pytest>=7.0",
    "pytest-mock",
    "requests",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic>=2.0",
]

[project.scripts]
faultline-mcp = "src.mcp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
